# football

./: Dockerfile  docker-compose.yml  schema.sql
api/: main.py  pyproject.toml
api/models/: clubs.py  database.py  leagues.py  matches.py
api/routers/admin/: clubs.py  leagues.py  matches.py
api/routers/user/: clubs.py  leagues.py  matches.py
web/: package-lock.json  package.json  vue.config.js
web/src/: App.vue  main.js
web/src/components/: UserPage.vue  store.ts
web/src/components/AdminPage/Matches/: Detail.vue  List.vue
